--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,6 +5,8 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/public;
+    proxy_read_timeout 600;
+    send_timeout 600;
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -13,6 +15,7 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_read_timeout 600;
     }
     location / {
         try_files $uri $uri/ /index.php?$query_string;
