--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "axios": "^1.6.4",
     "laravel-vite-plugin": "^1.0.0",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.9",
+    "tailwindcss": "^3.4.18",
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
     "alpinejs": "^3.14.1",
     "feather-icons": "^4.29.2"
   }
